Added paddings for page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,14 @@ body {
     margin: 0 auto;
     padding: 0;
 }
+
+button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 8px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
